--- a/index.html
+++ b/index.html
@@ -69,6 +69,20 @@
             margin-top: 30px;
             color: #aaa;
         }
+        .portfolio-link {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 8px 15px;
+            background-color: #ffeb3b;
+            color: #222;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            transition: background-color 0.3s;
+        }
+        .portfolio-link:hover {
+            background-color: #ffc107;
+        }
     </style>
 </head>
 
@@ -108,6 +122,7 @@
 
         <footer>
             <p>Midterm Lab Task 1 | BSIS Student</p>
+            <a href="https://moses032005.github.io/EDM_Moses-David/" class="portfolio-link">Back to Portfolio</a>
         </footer>
     </div>
 </body>
